[package]
name = "kernelr"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description ="kernel development"
repository ="https://github.com/girishnarayan/newkernel.git"
homepage ="https://github.com/girishnarayan/newkernel.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14"
anyhow = "1.0"
ostree ="0.19.0"

[build-dependencies]
cross = "0.2.5"

[target.arm-poky-linux-gnueabi]
rustflags = ["-C", "link-arg=-marm", "-C", "link-arg=-march=armv7-a", "-C", "link-arg=-mfpu=neon-vfpv4", "-C", "link-arg=-mfloat-abi=hard", "-C", "link-arg=-Tlinker.ld",
  "-C", "link-arg=-Ttext=0x8000",]
